Disable BrowserTestWithProfileShortcutManager.WindowProperties

TBR=pkasting@chromium.org

Bug: 915984
Change-Id: I10e71da2745658c948ffc7d6ffcad358bfa20118
Reviewed-on: https://chromium-review.googlesource.com/c/1381292
Reviewed-by: Tsuyoshi Horo <horo@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617359}
Former-commit-id: 1dae867a20d1df069575b97edd8179ef146c7b1e